[gd_scene load_steps=11 format=3 uid="uid://cogdeqoykfmnr"]

[ext_resource type="Script" path="res://scripts/storm.gd" id="1_f32pk"]
[ext_resource type="PackedScene" uid="uid://bsiiituya3btt" path="res://scenes/rain_particles.tscn" id="2_m0l1n"]
[ext_resource type="PackedScene" uid="uid://cwlggerxpgctb" path="res://scenes/swirling_leaf_particles.tscn" id="3_ysxc0"]
[ext_resource type="Texture2D" uid="uid://be1rvdcumufkg" path="res://assets/wind.png" id="4_emf8c"]

[sub_resource type="Curve" id="Curve_r81g2"]
_data = [Vector2(0, 0.204369), 0.0, 0.0, 0, 0, Vector2(0.5, 0.6), 0.0, 0.0, 0, 0, Vector2(1, 0.00475788), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_45jve"]
curve = SubResource("Curve_r81g2")

[sub_resource type="Curve" id="Curve_exayn"]
min_value = -1.0
_data = [Vector2(0.00666666, 0), 0.0, 0.0, 0, 0, Vector2(0.246959, 1), 0.0, 0.0, 0, 0, Vector2(0.498783, -0.996107), 0.0, 0.0, 0, 0, Vector2(0.749392, 1), 0.0, 0.0, 0, 0, Vector2(1, -0.00648785), 0.0, 0.0, 0, 0]
point_count = 5

[sub_resource type="Curve" id="Curve_xqfpd"]
_data = [Vector2(0, 0.0131921), 0.0, 0.0, 0, 0, Vector2(0.99635, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveXYZTexture" id="CurveXYZTexture_uojwc"]
curve_x = SubResource("Curve_exayn")
curve_y = SubResource("Curve_xqfpd")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_a66fc"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(661, 1, 1)
direction = Vector3(0, 1, 0)
spread = 0.0
initial_velocity_min = 30.0
initial_velocity_max = 50.0
directional_velocity_min = 20.0
directional_velocity_max = 50.0
directional_velocity_curve = SubResource("CurveXYZTexture_uojwc")
gravity = Vector3(0, 0, 0)
scale_min = 0.1
scale_max = 0.1
alpha_curve = SubResource("CurveTexture_45jve")

[node name="Storm" type="Node2D"]
z_index = 5
script = ExtResource("1_f32pk")

[node name="ParticlePivot" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2(576, 648)

[node name="RainParticles" parent="ParticlePivot" instance=ExtResource("2_m0l1n")]
unique_name_in_owner = true
position = Vector2(0, -867)

[node name="SwirlingLeafParticles" parent="ParticlePivot" instance=ExtResource("3_ysxc0")]
unique_name_in_owner = true
position = Vector2(0, -867)

[node name="WindParticles" type="GPUParticles2D" parent="ParticlePivot"]
position = Vector2(0, -867)
amount = 4
process_material = SubResource("ParticleProcessMaterial_a66fc")
texture = ExtResource("4_emf8c")
lifetime = 15.0
speed_scale = 5.0
fixed_fps = 60
interpolate = false
visibility_rect = Rect2(-100, -100, 200, 600)
trail_enabled = true
trail_lifetime = 0.5
trail_sections = 96
trail_section_subdivisions = 96
